--- a/spotify-client/src/styles/globals.css
+++ b/spotify-client/src/styles/globals.css
@@ -2,11 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  height: 100%;
-}
+@layer base {
+  html,
+  body {
+    height: 100%;
+  }
 
-#__next {
-  height: 100%;
+  #__next {
+    height: 100%;
+  }
 }
